--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -28,7 +27,7 @@
   <div class="cc about">
     <img src="https://avatars1.githubusercontent.com/u/25287877?s=220&v=4" />
     <br />
-    <p>Meu nome é Matheus sou um programador fullstack com muita dedicação no que faço e amo tudo isso aqui, um xodó na minha cafeína meu portfólio está sendo construído</p>
+    <p>Meu nome é Matheus sou um programador fullstack com um leve vício em café e capuccino amo debugar e refatorar rsrs, meu hobbie tirar foto. Meu portfólio está sendo construído aos poucos... enquanto isso acesse minhas redes sociais aqui em baixo.</p>
     <footer class="footer">
       <a href="https://github.com/t-heu">
         <i class="fab fa-github"></i>
