--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -66,6 +66,6 @@
       firebase.initializeApp(config);
     })()
   </script>
-  <script src="./js/tic-tac-toe.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
