fix: font, color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="profile">
       <img src="https://avatars1.githubusercontent.com/u/25287877?s=220&v=4" />
       <h1>
-        Matheus Gomes
+        Matheus Batista ;
       </h1>
     </div>
     
@@ -39,15 +39,24 @@
     </div>
     
     <footer class="footer">
-      <a href="https://github.com/t-heu">
-        <i class="fab fa-github"></i>
-      </a>
-      <a href="https://mobile.twitter.com/t_h_e_u">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://medium.com/@teuzin375">
-        <i class="fab fa-medium"></i>
-      </a>
+      <p><b><i class="fas fa-code"></i></b> with by <b>Matheus Batista</b></p>
+      <div>
+        <a href="https://github.com/t-heu">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://mobile.twitter.com/t_h_e_u">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://medium.com/@teuzin375">
+          <i class="fab fa-medium"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
     </footer>
   </div>
   <!-- cookie -->
