--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <a href="https://t-heu.github.io/calculator">Calculator</a>
       <a href="https://t-heu.github.io/tictactoe">Tic Tac Toe</a>
       <a href="https://t-heu.github.io/forca">Forca</a>
+      <a href="https://t-heu.github.io/aska">Aska</a>
     </div>
     
     <footer class="footer">
@@ -53,7 +54,7 @@
         <a href="#">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="#">
+        <a href="https://www.linkedin.com/in/matheusgbatista/">
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
