--- a/aska/dash.html
+++ b/aska/dash.html
@@ -45,7 +45,7 @@
       <div class="nav_p">
         <a href="#">News</a>
         <a href="profile.html" class="profile-img">
-          <img src="./assets/img/pro.jpeg" alt="profile">
+          <img src="./assets/img/6bc.png" alt="profile">
         </a>
       </div>
       
@@ -58,6 +58,7 @@
   </section>
   
   <main class="container">
+    <p id="erro"></p>
     <form method="get">
       <textarea id="txt" name="txt" type="text" placeholder="Update Status..."></textarea>
       <button onclick="crearMessageFeed()" type="button" class="btn">Enviar</button>
