--- a/aska/profile.html
+++ b/aska/profile.html
@@ -44,13 +44,13 @@
       <div class="nav_p">
         <a href="#">News</a>
         <a href="profile.html" class="profile-img">
-          <img src="./assets/img/pro.jpeg" alt="profile">
+          <img src="./assets/img/6bc.png" alt="profile">
         </a>
       </div>
       
       <nav id="nav_a" class="nav">
-        <a href="#">News feed</a>
         <a href="#">Messages</a>
+        <a href="dash.html">Dash</a>
         <a onclick="logout()">Logout</a>
       </nav>
     </header>
@@ -58,7 +58,7 @@
   
   <nav class="nav_2">
     <div class="photo">
-      <a href="index.html" class="profile-img"><img src="./assets/img/pro.png" alt="profile"></a>
+      <a href="index.html" class="profile-img"><img src="./assets/img/6bc.png" alt="profile"></a>
     </div>
     <div class="info">
       <h2 id="user_para">name</h2>
