--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="My mini blog">
   <meta property="keywords" content="blog,page,theu,portfolio,project">
   <meta property="og:image" content="https://avatars1.githubusercontent.com/u/25287877?s=220&v=4">
-  <title>Matheus Gomes</title>
+  <title>Matheus Batista ;</title>
   <link rel="icon" href="https://avatars1.githubusercontent.com/u/25287877?s=220&v=4" sizes="32x32">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -29,6 +29,10 @@
       <h1>
         Matheus Batista ;
       </h1>
+    </div>
+    
+    <div class="about">
+      <p>Hi, my name is Matheus Batista, I am a software developer, growing... hihi. Follow some of my projects below and mainly follow the github, which has a lot more interesting things. Bye👋</p>
     </div>
     
     <div class="app">
