add: online tictactoe,network  spotify index

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <a href="https://www.linkedin.com/in/matheusgbatista/">
           <i class="fab fa-linkedin"></i>
         </a>
+        <a href="https://open.spotify.com/user/jpio2sx6221ch7lp0c1am99w7?si=v_FKsWJvRw6m4EMjr2NBkg">
+          <i class="fab fa-spotify"></i>
+        </a>
       </div>
     </footer>
   </div>
