refactor(css/html): change names

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <div class="about">
     <div class="about__profile">
-      <img src="https://avatars1.githubusercontent.com/u/25287877?s=220&v=4" />
+      <img class="about__image" src="https://avatars1.githubusercontent.com/u/25287877?s=220&v=4" />
       <h1 class="about__title font-xl">
         Matheus Batista ;
       </h1>
@@ -50,23 +50,23 @@
     
     <footer class="footer">
       <p class="font-sm"><b><i class="fas fa-code"></i></b> with by <b>Matheus Batista</b></p>
-      <div>
-        <a href="https://github.com/t-heu">
+      <div class="footer__icons">
+        <a class="footer__link" href="https://github.com/t-heu">
           <i class="fab fa-github font-md"></i>
         </a>
-        <a href="https://mobile.twitter.com/t_h_e_u">
+        <a class="footer__link" href="https://mobile.twitter.com/t_h_e_u">
           <i class="fab fa-twitter font-md"></i>
         </a>
-        <a href="https://medium.com/@teuzin375">
+        <a class="footer__link" href="https://medium.com/@teuzin375">
           <i class="fab fa-medium font-md"></i>
         </a>
-        <a href="#">
+        <a class="footer__link" href="#">
           <i class="fab fa-instagram font-md"></i>
         </a>
-        <a href="https://www.linkedin.com/in/matheusgbatista/">
+        <a class="footer__link" href="https://www.linkedin.com/in/matheusgbatista/">
           <i class="fab fa-linkedin font-md"></i>
         </a>
-        <a href="https://open.spotify.com/user/jpio2sx6221ch7lp0c1am99w7?si=v_FKsWJvRw6m4EMjr2NBkg">
+        <a class="footer__link" href="https://open.spotify.com/user/jpio2sx6221ch7lp0c1am99w7?si=v_FKsWJvRw6m4EMjr2NBkg">
           <i class="fab fa-spotify font-md"></i>
         </a>
       </div>
